--- a/openmrs-client/src/main/res/layout/activity_main.xml
+++ b/openmrs-client/src/main/res/layout/activity_main.xml
@@ -123,7 +123,7 @@
                         android:layout_weight="1">
 
                         <EditText
-                            android:id="@+id/firstname"
+                            android:id="@+id/editTextName"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:focusable="true"
@@ -141,7 +141,7 @@
                         android:layout_weight="1">
 
                         <EditText
-                            android:id="@+id/middlename"
+                            android:id="@+id/editTextmiddlename"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:focusable="true"
@@ -154,40 +154,6 @@
 
                 </LinearLayout>
 
-
-                <TextView
-                    android:id="@+id/fnameerror"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_weight="1"
-                    android:padding="2dp"
-                    android:text="@string/emptyerror"
-                    android:textColor="@color/red"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:visibility="gone" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/textInputLayoutSurname"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
-
-                    <EditText
-                        android:id="@+id/surname"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:focusable="true"
-                        android:hint="@string/reg_surname_hint"
-                        android:imeOptions="actionNext"
-                        android:inputType="textPersonName|textCapWords"
-                        android:maxLines="1"
-                        android:textSize="14sp" />
-                </android.support.design.widget.TextInputLayout>
 
                 <TextView
                     android:id="@+id/lnameerror"
@@ -228,7 +194,7 @@
                     android:visibility="gone" />
 
                 <RadioGroup
-                    android:id="@+id/gender"
+                    android:id="@+id/radiogender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -282,7 +248,7 @@
                         android:layout_alignParentTop="true">
 
                         <EditText
-                            android:id="@+id/dob"
+                            android:id="@+id/editTextDob"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="20dp"
@@ -310,15 +276,6 @@
                         android:background="@drawable/btn_date_picker"/>
                 </RelativeLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginStart="20dp"
-                    android:text="@string/label_or"
-                    android:textColor="#777"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -328,42 +285,6 @@
                     android:layout_marginRight="20dp"
                     android:weightSum="2"
                     android:baselineAligned="false">
-
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/textInputLayoutEstyr"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <EditText
-                            android:id="@+id/estyr"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:focusable="true"
-                            android:hint="@string/estyr"
-                            android:imeOptions="actionNext"
-                            android:inputType="number"
-                            android:maxLines="1"
-                            android:textSize="14sp" />
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/textInputLayoutEstmonth"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <EditText
-                            android:id="@+id/estmonth"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:focusable="true"
-                            android:hint="@string/estmonth"
-                            android:imeOptions="actionNext"
-                            android:inputType="number"
-                            android:maxLines="1"
-                            android:textSize="14sp" />
-                    </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
             </LinearLayout>
@@ -430,7 +351,7 @@
                     >
 
                     <EditText
-                        android:id="@+id/addr1"
+                        android:id="@+id/editTextAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -451,66 +372,20 @@
                     >
 
                     <EditText
-                        android:id="@+id/addr2"
+                        android:id="@+id/editTextMobile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
                         android:layout_marginTop="20dp"
                         android:focusable="true"
-                        android:hint="@string/addr2_hint"
+                        android:hint="mobile"
                         android:imeOptions="actionNext"
                         android:inputType="textCapWords"
                         android:maxLines="1"
                         android:textSize="14sp" />
                 </android.support.design.widget.TextInputLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="20dp"
-                    android:orientation="horizontal"
-                    android:weightSum="2"
-                    android:baselineAligned="false">
-
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/textInputLayoutCountry"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <AutoCompleteTextView
-                            android:id="@+id/country"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:focusable="true"
-                            android:hint="@string/patient_country_label"
-                            android:imeOptions="actionNext"
-                            android:inputType="textCapSentences"
-                            android:maxLines="1"
-                            android:textSize="14sp" />
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:id="@+id/textInputLayoutState"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <AutoCompleteTextView
-                            android:id="@+id/state"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:focusable="true"
-                            android:hint="@string/patient_state_label"
-                            android:imeOptions="actionNext"
-                            android:inputType="text"
-                            android:maxLines="1"
-                            android:textSize="14sp" />
-                    </android.support.design.widget.TextInputLayout>
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -528,11 +403,11 @@
                         android:layout_weight="1">
 
                         <EditText
-                            android:id="@+id/city"
+                            android:id="@+id/editTextLocation"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:focusable="true"
-                            android:hint="@string/patient_city_label"
+                            android:hint="Location"
                             android:imeOptions="actionNext"
                             android:inputType="text"
                             android:maxLines="1"
@@ -546,12 +421,12 @@
                         android:layout_weight="1">
 
                         <EditText
-                            android:id="@+id/editTextName"
+                            android:id="@+id/editTextProximity"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="20dp"
                             android:focusable="true"
-                            android:hint="@string/patient_postal_label"
+                            android:hint="Proximity"
                             android:imeOptions="actionDone"
                             android:inputType="text"
                             android:maxLines="1"
@@ -559,28 +434,6 @@
                     </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
-                <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="20dp"-->
-                <!--android:layout_marginLeft="12dp"-->
-                <!--android:textSize="18sp"-->
-                <!--android:textStyle="bold"-->
-                <!--android:textColor="#555"-->
-                <!--android:text="@string/reg_ques_phno"/>-->
-
-                <!--<EditText-->
-                <!--android:id="@+id/phone"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginLeft="20dp"-->
-                <!--android:layout_marginRight="20dp"-->
-                <!--android:layout_marginBottom="20dp"-->
-                <!--android:textSize="14sp"-->
-                <!--android:focusable="true"-->
-                <!--android:hint="@string/phone_hint"-->
-                <!--android:inputType="phone"-->
-                <!--android:singleLine="true" />-->
             </LinearLayout>
 
             <Button
