--- a/openmrs-client/src/main/res/layout/fragment_login.xml
+++ b/openmrs-client/src/main/res/layout/fragment_login.xml
@@ -17,7 +17,8 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/primary">
 
     <ProgressBar
         android:id="@+id/locationLoadingProgressBar"
