--- a/openmrs-client/src/main/res/layout/activity_main.xml
+++ b/openmrs-client/src/main/res/layout/activity_main.xml
@@ -46,7 +46,9 @@
                     android:text="@string/patient_details_photo_label"
                     android:textColor="@color/primary"
                     android:textSize="20sp"
+                    android:visibility="invisible"
                     android:textStyle="bold" />
+
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -289,6 +291,7 @@
                 </LinearLayout>
             </LinearLayout>
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -434,7 +437,35 @@
                     </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/card"
+                android:orientation="vertical">
+
+                <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="8dp"-->
+                <!--android:layout_marginStart="8dp"-->
+                <!--android:layout_marginTop="20dp"-->
+                <!--android:text="Contact's Information"-->
+                <!--android:textColor="@color/primary"-->
+                <!--android:textSize="20sp"-->
+                <!--android:textStyle="bold" />-->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Location Of Contact With Patient"
+                    android:textColor="#555"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -449,8 +480,18 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                     </Spinner>
-
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Relationship With Patient"
+                    android:textColor="#555"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -467,6 +508,16 @@
                     </Spinner>
                 </LinearLayout>
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Previous TB Treatment"
+                    android:textColor="#555"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -481,6 +532,19 @@
                         android:layout_height="wrap_content">
                     </Spinner>
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="20dp"
+                    android:text="X Ray Result?"
+                    android:textColor="#555"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -495,6 +559,18 @@
                         android:layout_height="wrap_content">
                     </Spinner>
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Test For Latent TB Infection?"
+                    android:textColor="#555"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -509,21 +585,42 @@
                         android:layout_height="wrap_content">
                     </Spinner>
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Result Of LBI Testing"
+                    android:textColor="#555"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginTop="20dp"
                     android:weightSum="2"
                     android:baselineAligned="false">
-                    <Spinner
-                        android:id="@+id/resultlbispinner"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    </Spinner>
-                </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="20dp"
+                        android:weightSum="2"
+                        android:baselineAligned="false">
+                        <Spinner
+                            android:id="@+id/resultlbispinner"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                        </Spinner>
+                    </LinearLayout>
+
+                </LinearLayout>
             </LinearLayout>
 
         <!-- added by wcr-->
