--- a/openmrs-client/src/main/res/layout/fragment_dashboard.xml
+++ b/openmrs-client/src/main/res/layout/fragment_dashboard.xml
@@ -94,7 +94,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:visibility="invisible"
                 android:background="@drawable/card">
 
                 <ImageView
@@ -104,7 +103,6 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/dashboard_icon_margin"
-                    android:visibility="invisible"
                     android:contentDescription="@string/dashboard_registry_icon_label" />
 
                 <TextView
@@ -114,10 +112,9 @@
                     android:layout_below="@id/registryPatientButton"
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                     android:layout_marginTop="@dimen/dashboard_text_top_margin"
+                    android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                     android:text="@string/action_register_patient"
-                    android:visibility="invisible"
                     android:textSize="@dimen/dashboard_text_size" />
             </RelativeLayout>
 
@@ -127,7 +124,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="1"
-                android:visibility="invisible"
                 android:background="@drawable/card">
 
                 <ImageView
@@ -137,7 +133,6 @@
                     android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
                     android:layout_margin="@dimen/dashboard_icon_margin"
-                    android:visibility="invisible"
                     android:contentDescription="@string/dashboard_registry_icon_label" />
 
                 <TextView
@@ -150,7 +145,6 @@
                     android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                     android:layout_marginTop="@dimen/dashboard_text_top_margin"
                     android:text="@string/dashboard_forms_icon_label"
-                    android:visibility="invisible"
                     android:textSize="@dimen/dashboard_text_size" />
             </RelativeLayout>
         </TableRow>
@@ -163,7 +157,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:visibility="invisible"
             android:background="@drawable/card">
 
             <ImageView
@@ -173,7 +166,6 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerInParent="true"
                 android:layout_margin="@dimen/dashboard_icon_margin"
-                android:visibility="invisible"
                 android:contentDescription="@string/dashboard_registry_icon_label" />
 
             <TextView
@@ -185,8 +177,7 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/dashboard_text_bottom_margin"
                 android:layout_marginTop="@dimen/dashboard_text_top_margin"
-                android:visibility="invisible"
-                android:text="Register Contact"
+                android:text="@string/dashboard_visit_icon_label"
                 android:textSize="@dimen/dashboard_text_size" />
         </RelativeLayout>
         </TableRow>
